# garmin-sailing-mcp

./: README.md  pyproject.toml
docs/: sailing-map-architecture.md
garmin_sailing/: __init__.py  __main__.py  auth.py  server.py
