[project]
name = "garmin-sailing-mcp"
version = "0.1.0"
description = "MCP server for sailing analytics — Garmin GPS + Open-Meteo weather"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.25",
    "fastmcp>=3.0.0",
    "httpx>=0.27",
]

[project.scripts]
garmin-sailing = "garmin_sailing.__main__:main"
